--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,18 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Ng2StarterKit</title>
+  <title>Starter Kit</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <!--[if lt IE 10]>
+  <p class="browsehappy">
+    You are using an <strong>outdated</strong> browser.
+    Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
+  </p>
+  <![endif]-->
+  <app-root></app-root>
 </body>
 </html>
